[tool.poetry]

name = "memegen-flet"
version = "0.1"
description = "Memegen.link client built with Flet."
authors = ["Jace Browning <jacebrowning@gmail.com>"]

[tool.poetry.dependencies]

python = "~3.10"

flet = "~0.4"
minilog = "^2.1"
requests = "^2.28.1"
universal-startfile = "^0.2"

[tool.poetry.dev-dependencies]

black = "^22.6.0"
isort = "^5.10.1"

pyinstaller = "^5.7"
pillow = "^9.2"

[build-system]

requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
